Deduplicate JVM args